--- a/website/static/css/find.css
+++ b/website/static/css/find.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../images/background.jpg');
+
     margin: 0;
     padding: 0;
 }
