--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -37,11 +37,14 @@
         <p>If you have any questions or feedback, please feel free to contact us:</p>
         <p>Email: coper5540@gmail.com</p>
         <p>Phone: +251-953-962-429</p>
+        <a href="https://www.linkedin.com/in/biruk-tesfaye-a29220280/" style="color: white;">Linkedin</a> | <span>
+        <a href="https://github.com/tech7895/" style="color: white;">   Github</a>  <span>
+
     </div>
 
     <script>
         function goToHomePage() {
-            window.location.href = href="{{ url_for('views.home') }}"; // Replace "home.html" with the actual path to your home page
+            window.location.href = href="{{ url_for('views.index') }}"; // Replace "home.html" with the actual path to your home page
         }
     </script>
 </body>
