--- a/website/static/css/ticket.css
+++ b/website/static/css/ticket.css
@@ -1,88 +1,84 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
+    background-color: white;
     padding: 20px;
 }
 
-h1 {
+.titles.rotated {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    font-weight: 0.5rem;
+    color: rgb(81, 40, 114);
+    font-size: 1.1rem;
+}
+
+.titles.rotated2 {
+    writing-mode: vertical-rl;
+    transform: rotate(0deg);
+    font-weight: 0.5rem;
+    color: rgb(34, 156, 75);
+    font-size: 1.1rem;
+}
+
+.titles.rotated3 {
+    writing-mode: vertical-rl;
+    transform: rotate(0deg);
+    color: rgb(20, 124, 184);
+    font-weight: bold;
+    font-size: 2rem;
+    margin-right: 0%;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 0px;
+    align-items: center;
+    border-radius: 7px;
+    width: 70%;
+    max-width: 700px;
+    max-height: 270px;
+    margin: 30px auto;
+    padding: 10px;
+    background-color: white;
+}
+
+.images-container {
+    grid-column: span 1; /* Span one column for the image container */
+    width: 20%;
+    margin-right: 0px;
+}
+
+.grid-item {
+    padding: 10px;
+    /*border: 1px solid red;*/
+}
+
+.grid-item.header {
     text-align: center;
-    color: #333;
 }
 
-form {
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+p {
+    font-size: 14px;
+    line-height: 1.5;
 }
 
-label {
-    display: block;
-    margin-bottom: 10px;
+.next-image2 {
+    width: 100px;
+    height: auto;
+    border-radius: 4%;
+    writing-mode: vertical-rl;
+    transform: rotate(270deg);
+}
+.head1 {
+    color: white;
+    font-size: 1.7rem;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+.btn-primary {
+    margin-left: 350px;
+    margin-bottom: 100px;
 }
 
-input[type="text"],
-input[type="date"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    transition: border-color 0.3s ease;
-}
-
-input[type="text"]:focus,
-input[type="date"]:focus {
-    outline: none;
-    border-color: #aaa;
-}
-
-.dropdown {
-    position: relative;
-}
-
-.dropdown-content {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    max-height: 200px;
-    overflow-y: auto;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    display: block;
-    padding: 10px;
-    color: #333;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-}
-
-.dropdown-content a:hover {
-    background-color: #f4f4f4;
-}
-
-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin-top: 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: #555;
-}
+/********************************************/
