--- a/website/templates/add-payment.html
+++ b/website/templates/add-payment.html
@@ -3,6 +3,14 @@
 {% block title %} Add Routes{% endblock %}
 
 {% block body %}
+ <!-- Flash message -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div style="background-color: #f6ff97; padding: 10px;">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
 <form action="{{ url_for('admin.add_payment') }}" method="POST" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
@@ -26,5 +34,7 @@
         </tbody>
     </table>
 </form>
+
+
 
 {% endblock %}
