--- a/website/templates/add-routes.html
+++ b/website/templates/add-routes.html
@@ -1,45 +1,74 @@
 {% extends 'base2.html' %}
 
-{% block title %} Add Routes{% endblock %}
+{% block title %} Add Routes {% endblock %}
 
 
 {% block body %}
-
-<table class="table table-hov">
-    <thead>
-        <tr class="hover-row">
-            <th scope="col">Departure</th>
-            <th scope="col">Destination</th>
-            <th scope="col">Bus Type</th>
-            
-            <th scope="col">Departure Date</th>
-            <th scope="col">Departure time</th>
-            <th scope="col">Arrival Time</th>
-            <th scope="col">Price (Birr)</th>
-            <th scope="col">Bus Photo</th>
-           <th scope="col">Add</th> 
-
-        </tr>
-    </thead>
-
-    <tbody>
-        <tr>
-            <form action="" method="POST" enctype="multipart/form-data">
-                {{ form.hidden_tag() }}
-
-                <td>{{ form.departure }}</td>
-                <td>{{ form.destination }}</td>
-                <td>{{ form.bus_name }}</td>
-                <td>{{ form.departure_date }}</td>
-                <td><input type="text" id="departure_time" name="departure_time"></td>
-                <td><input type="text" id="arrival_time" name="arrival_time"></td>
-                <td>{{ form.price}}</td>
-                <td>{{ form.bus_picture }}</td>
-                <td>{{ form.add_bus() }}</td>
-            </form>
-        </tr>
-    </tbody>
-</table>
+<div class="container">
+    <h4 style="color: grey;">Add bus schedules</h4>
+    
+    <!-- Flash message -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="flash-message">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
 
+    <form action="" method="POST" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+
+        <div class="table-container">
+            <table class="table table-hover">
+                <tbody>
+                    <tr>
+                        <th scope="row">Departure</th>
+                        <td>{{ form.departure }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Destination</th>
+                        <td>{{ form.destination }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Bus Type</th>
+                        <td>{{ form.bus_name }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Side Number</th>
+                        <td>{{ form.side_number }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Departure Date</th>
+                        <td>{{ form.departure_date }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Departure Time</th>
+                        <td><input type="text" id="departure_time" name="departure_time"></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Arrival Time</th>
+                        <td><input type="text" id="arrival_time" name="arrival_time"></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Price (Birr)</th>
+                        <td>{{ form.price }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Bus Photo</th>
+                        <td>{{ form.bus_picture }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row"></th>
+                        <td>{{ form.add_bus() }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </form>
+</div>
+
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/add.css') }}">
 {% endblock %}
