--- a/website/templates/change-password.html
+++ b/website/templates/change-password.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 
-{% block title %} Home {% endblock %}
+{% block title %} My Profile{% endblock %}
 
 
 {% block body %}
