--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -11,7 +11,7 @@
 <body style="background-color: rgb(0, 100, 100);">
     <header>
         <div id="header_logo">
-            <a href="{{ url_for('views.home') }}">
+            <a href="{{ url_for('views.index') }}">
                 <img src="static/images/logo.png" alt="Logo">
             </a>
         </div>
