--- a/website/templates/manage-banks.html
+++ b/website/templates/manage-banks.html
@@ -5,9 +5,18 @@
 
 {% block body %}
 
+ <!-- Flash message -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div style="background-color: #f6ff97; padding: 10px;">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
 {% if fields | length < 1 %}
 <br>
-<h3 style="color: yellow;">No Buses scheduled</h3>
+<h3 style="color: yellow;">No Payment option added yet</h3>
 
 {% else %}
 
@@ -33,8 +42,8 @@
            
 
             <td>
-                <a href="/update-field/{{ field.id }}" class="btn btn-primary">Update</a>
-                <a href="/delete-field/{{ field.id }}" class="btn btn-primary2">Delete</a>
+                <a href="/update-bank/{{ field.id }}" class="btn btn-primary">Update</a>
+                <a href="/delete-bank/{{ field.id }}" class="btn btn-primary2">Delete</a>
             </td>
              
 
